--- a/dancefloor.html
+++ b/dancefloor.html
@@ -16,6 +16,9 @@
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="ImageDancer"  data-dancer-maker-function-arguments="[&quot;http://fillmurray.com/g/200/300&quot;]">add a image dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="MurrayDancer"  data-dancer-maker-function-arguments="">BILL MURRAY</a>
     </div>
+    <div class="danceFloor">
+      <canvas id="danceCanvas" width="1200" height="1200"></canvas>      
+    </div>
     <script src="src/init.js"></script>
   </body>
 </html>
