--- a/dancefloor.html
+++ b/dancefloor.html
@@ -8,6 +8,7 @@
     <script src="src/blinkyDancer.js"></script>
     <script src="src/ImageDancer.js"></script>
     <script src="src/MurrayDancer.js"></script>
+    <script src="src/Renderer.js"></script>
   </head>
   <body>
     <div class="topbar">
