--- a/dancefloor.html
+++ b/dancefloor.html
@@ -9,6 +9,7 @@
     <script src="src/ImageDancer.js"></script>
     <script src="src/MurrayDancer.js"></script>
     <script src="src/Renderer.js"></script>
+    <script src="src/Stepper.js"></script>
   </head>
   <body>
     <div class="topbar">
