--- a/dancefloor.html
+++ b/dancefloor.html
@@ -14,9 +14,8 @@
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="ImageDancer"  data-dancer-maker-function-arguments="[&quot;http://fillmurray.com/g/200/300&quot;]">add a image dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="MurrayDancer"  data-dancer-maker-function-arguments="">BILL MURRAY</a>
+      <a href="#" class="lineUpButton" data-dancer-maker-function-arguments="">Line Up</a>
     </div>
     <div class="danceFloor">
       <canvas id="danceCanvas" width="1200" height="1200"></canvas>      
