--- a/dancefloor.html
+++ b/dancefloor.html
@@ -10,15 +10,17 @@
     <script src="src/MurrayDancer.js"></script>
     <script src="src/Renderer.js"></script>
     <script src="src/Stepper.js"></script>
+    <script src="src/GhostDancer.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="MurrayDancer"  data-dancer-maker-function-arguments="">BILL MURRAY</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="Ghost"  data-dancer-maker-function-arguments="">Spawn Ghost</a>
       <a href="#" class="lineUpButton" data-dancer-maker-function-arguments="">Line Up</a>
     </div>
     <div class="danceFloor">
-      <canvas id="danceCanvas" width="1200" height="1200"></canvas>      
+      <canvas id="danceCanvas"></canvas>      
     </div>
     <script src="src/init.js"></script>
   </body>
