--- a/dancefloor.html
+++ b/dancefloor.html
@@ -11,12 +11,14 @@
     <script src="src/Renderer.js"></script>
     <script src="src/Stepper.js"></script>
     <script src="src/GhostDancer.js"></script>
+    <script src="src/GhostHunter.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="MurrayDancer"  data-dancer-maker-function-arguments="">BILL MURRAY</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="Ghost"  data-dancer-maker-function-arguments="">Spawn Ghost</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="GhostHunter"  data-dancer-maker-function-arguments="">Spawn Ghosthunter</a>
       <a href="#" class="lineUpButton" data-dancer-maker-function-arguments="">Line Up</a>
     </div>
     <div class="danceFloor">
