--- a/dancefloor.html
+++ b/dancefloor.html
@@ -16,20 +16,22 @@
     <script src="src/GhostHunter.js"></script>
   </head>
   <body>
-    <nav>
-      <div class="nav-wrapper blue-grey darken-1">
-        <a href="#!" class="brand-logo">Ghost Hunters</a>
-        <ul class="right hide-on-med-and-down">
-          <li><a class="waves-effect waves-light btn cyan darken-1" id="lineUp">Line Up</a></li>
-          <li><a class="waves-effect waves-light btn addDancerButton cyan darken-1" data-dancer-maker-function-name="Ghost" data-dancer-spawn-count="5" >Spawn Ghost</a></li>
-          <li><a class="waves-effect waves-light btn addDancerButton cyan darken-1"  data-dancer-maker-function-name="GhostHunter">Spawn Ghosthunter</a></li>  
-          <li><a class="waves-effect waves-light btn-large addDancerButton cyan darken-1" data-dancer-maker-function-name="MurrayDancer">BILL MURRAY</a></li>
-        </ul>
+    <header>
+      <nav>
+        <div class="nav-wrapper blue-grey darken-1">
+          <a href="#!" class="brand-logo">Ghost Hunters</a>
+          <ul class="right hide-on-med-and-down">
+            <li><a class="waves-effect waves-light btn cyan darken-1" id="lineUp">Line Up</a></li>
+            <li><a class="waves-effect waves-light btn addDancerButton cyan darken-1" data-dancer-maker-function-name="Ghost" data-dancer-spawn-count="5" >Spawn Ghost</a></li>
+            <li><a class="waves-effect waves-light btn addDancerButton cyan darken-1"  data-dancer-maker-function-name="GhostHunter">Spawn Ghosthunter</a></li>  
+            <li><a class="waves-effect waves-light btn-large addDancerButton cyan darken-1" data-dancer-maker-function-name="MurrayDancer">BILL MURRAY</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+      <div class="danceFloor">
+        <canvas id="danceCanvas"></canvas>      
       </div>
-    </nav>
-    <div class="danceFloor">
-      <canvas id="danceCanvas"></canvas>      
-    </div>
     <script src="src/init.js"></script>
   </body>
 </html>
