--- a/dancefloor.html
+++ b/dancefloor.html
@@ -14,6 +14,7 @@
     <script src="src/Stepper.js"></script>
     <script src="src/Ghost.js"></script>
     <script src="src/GhostHunter.js"></script>
+    <script src="src/ParticleEffect.js"></script>
   </head>
   <body>
     <header>
