--- a/dancefloor.html
+++ b/dancefloor.html
@@ -15,6 +15,7 @@
     <script src="src/Ghost.js"></script>
     <script src="src/GhostHunter.js"></script>
     <script src="src/ParticleEffect.js"></script>
+    <script src="src/BirrMullay.js"></script>
   </head>
   <body>
     <header>
@@ -25,7 +26,8 @@
             <li><a class="waves-effect waves-light btn cyan darken-1" id="lineUp">Line Up</a></li>
             <li><a class="waves-effect waves-light btn addDancerButton cyan darken-1" data-dancer-maker-function-name="Ghost" data-dancer-spawn-count="5" >Spawn Ghost</a></li>
             <li><a class="waves-effect waves-light btn addDancerButton cyan darken-1"  data-dancer-maker-function-name="GhostHunter">Spawn Ghosthunter</a></li>  
-            <li><a class="waves-effect waves-light btn-large addDancerButton cyan darken-1" data-dancer-maker-function-name="MurrayDancer">BILL MURRAY</a></li>
+            <li><a class="waves-effect waves-light btn addDancerButton cyan darken-1" data-dancer-maker-function-name="MurrayDancer">Cheerleader Bill</a></li>
+            <li><a class="waves-effect waves-light btn-large addDancerButton red" data-dancer-maker-function-name="BirrMullay">!! BIRR MULLAY !!</a></li>
           </ul>
         </div>
       </nav>
