Add scoreboard frame.

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -20,7 +20,7 @@
   <body>
     <header>
       <nav>
-        <div class="nav-wrapper blue-grey darken-1">
+        <div class="nav-wrapper blue-grey darken-2">
           <a href="#!" class="brand-logo">Ghost Hunters</a>
           <ul class="right hide-on-med-and-down">
             <li><a class="waves-effect waves-light btn cyan darken-1" id="lineUp">Line Up</a></li>
@@ -28,6 +28,14 @@
             <li><a class="waves-effect waves-light btn addDancerButton cyan darken-1"  data-dancer-maker-function-name="GhostHunter">Spawn Ghosthunter</a></li>  
             <li><a class="waves-effect waves-light btn addDancerButton cyan darken-1" data-dancer-maker-function-name="MurrayDancer">Cheerleader Bill</a></li>
             <li><a class="waves-effect waves-light btn-large addDancerButton red" data-dancer-maker-function-name="BirrMullay">!! BIRR MULLAY !!</a></li>
+          </ul>
+        </div>
+        <div class="nav-wrapper blue-grey darken-1 scoreboard">
+          <ul class="right hide-on-med-and-down">
+            <li class="chip"><img src="assets/bill.png" /></li>
+            <li class="chip"><img src="assets/luigi.png" /></li>
+            <li class="chip"><img src="assets/darthvader.png" /></li>
+            <li class="chip"><img src="assets/genie.png" /></li>
           </ul>
         </div>
       </nav>
